--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Christiano0407/singlePage_Aplication_course#readme",
   "devDependencies": {
+    "html-loader": "^3.1.0",
     "webpack-cli": "^4.9.2"
   }
 }
