--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "singlePage Javascript",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "develop": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
