--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   },
   "homepage": "https://github.com/Christiano0407/singlePage_Aplication_course#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
     "html-loader": "^3.1.0",
     "webpack-cli": "^4.9.2"
   }
