--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.3",
     "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "webpack-cli": "^4.9.2"
   }
 }
