add change webpack

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,5 @@
     "activityBarBadge.background": "#bf0060",
     "activityBarBadge.foreground": "#e7e7e7"
   },
-  "peacock.remoteColor": "#007fff"
+  "peacock.remoteColor": "#000"
 }
